# bufferbane

./: .gitignore  BUGFIX_INTERACTIVE_CHART.md  BUILT_IN_CLOCK_SYNC.md  CHANGELOG.md  CHART_ENHANCEMENTS.md  CLOCK_SYNC_EXPLAINED.md  Cargo.toml  DATA_AGGREGATION_README.md  DEPLOY_AND_TEST.sh  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_STRUCTURE.md  ENCRYPTION_SECURITY.md  GAP_HANDLING_UPDATE.md  GLIBC_COMPATIBILITY.md  INSTALL.md  INTERACTIVE_LEGEND.md  LICENSE  MUSL_BUILD_SETUP.md  Makefile  OFFSET_ALGORITHM_EXPLAINED.md  PHASE21_24_PROGRESS.md  PHASE22_COMPLETE.md  PHASE2_CHART_FIX.md  PHASE2_QUICKSTART.md  PHASE2_SETUP.md  PHASE2_STATUS.md  PHASE_SUMMARY.md  README.md  RESEARCH.md  RRD_VS_SQLITE.md  SCENARIOS.md  SPECIFICATION.md  STAT_PANEL_INTERACTIVITY.md  TIME_SYNC_IMPLEMENTATION.md  UBUNTU_SETUP.md  VISUALIZATION_IMPROVEMENTS.md  WINDOWED_AGGREGATION.md  bufferbane.service.in  check-clock-sync.sh  client.conf.template  (+3 more)
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs  network_monitor.rs
client/src/analysis/: mod.rs
client/src/charts/: mod.rs
client/src/config/: mod.rs
client/src/output/: mod.rs
client/src/storage/: mod.rs
client/src/templates/: interactive_chart.html
client/src/testing/: icmp.rs  measurement.rs  mod.rs  server.rs
client/templates/: interactive_chart.html
docs/: INTERACTIVE_CHARTS.md  USAGE.md  bufferbane.service.example
docs/planning/: MULTI_INTERFACE.md  README.md  RESEARCH.md  SERVER_COMPONENT.md  SPECIFICATION.md
protocol/: Cargo.toml
protocol/src/: constants.rs  crypto.rs  error.rs  lib.rs  packets.rs
server/: Cargo.toml
server/src/: main.rs
server/src/config/: mod.rs
server/src/handlers/: echo.rs  knock.rs  mod.rs  throughput.rs
server/src/session/: mod.rs
