[workspace]
resolver = "2"
members = [
    "protocol",
    "client",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Florian Schüller <schuellerf@gmail.com>"]
repository = "https://github.com/schuellerf/bufferbane"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Networking
surge-ping = "0.8"
socket2 = "0.5"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Time handling
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Charts (Phase 1)
plotters = { version = "0.3", features = ["bitmap_backend", "bitmap_encoder", "ttf"] }

# Cryptography (for Phase 2, but define now)
chacha20poly1305 = "0.10"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
crossterm = "0.27"  # Terminal control for console output

