[package]
name = "bufferbane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "bufferbane"
path = "src/main.rs"

[dependencies]
# Workspace crates
protocol = { path = "../protocol" }

# Workspace dependencies
tokio = { workspace = true }
surge-ping = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
plotters = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }

# Additional dependencies
serde_json = "1.0"
csv = "1.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
