[package]
name = "bufferbane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "bufferbane"
path = "src/main.rs"

[features]
default = ["png-charts"]
png-charts = ["plotters"]  # Enable PNG chart export (requires fontconfig/freetype)

[dependencies]
# Workspace crates
protocol = { path = "../protocol" }

# Workspace dependencies
tokio = { workspace = true }
surge-ping = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
plotters = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }

# Additional dependencies
serde_json = "1.0"
csv = "1.3"
rand = "0.8"
# Use rustls for all builds (pure Rust TLS, no OpenSSL dependency for static builds)
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
