[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }

[lib]
name = "protocol"
path = "src/lib.rs"
